# zara-learns-web

./: README.md  docker-compose.yaml  index.html  package-lock.json  package.json
backend/: .gitignore  README.md  pyproject.toml
backend/src/zara_learns_web/: config.py  config.toml  main.py
backend/src/zara_learns_web/migrations/default/: 0_20260103111234_init.py  1_20260108114326_add_price_field.py  2_20260109130747_update.py
backend/src/zara_learns_web/storage/: __init__.py  generate_schemas.py  image.py  models.py
backend/tests/: test_config.py
frontend/: README.md  package.json
frontend-admin/: package-lock.json  package.json
frontend-admin/src/: App.css  App.tsx  Catalog.css  Catalog.tsx  FileUploader.css  FileUploader.tsx  Table.css  main.tsx
frontend/src/: App.tsx
src/: App.css  App.tsx  main.tsx
